# firstmate

./: .gitignore  .no-mistakes.yaml  AGENTS.md  CONTRIBUTING.md  README.md
.claude/: settings.json
docs/: architecture.md  autocompact-recovery.md  bridge-cutover-sealed-runtimes.md  browser-automation.md  browser-axi-isolation.md  cd-guard.md  cmux-backend.md  configuration.md  herdr-backend.md  macos-permissions.md  orca-backend.md  permission-stall-detection.md  report-stack.md  scripts.md  tmux-backend.md  turnend-guard.md  wedge-alarm.md  zellij-backend.md
tests/: bridge-cutover-python.test.sh  fm-account-directory.test.sh  fm-account-routing.test.sh  fm-afk-inject-e2e.test.sh  fm-afk-inject-herdr-e2e.test.sh  fm-afk-launch.test.sh  fm-afk-reap-wake-e2e.test.sh  fm-autocompact.test.sh  fm-backend-autodetect-smoke.test.sh  fm-backend-cmux.test.sh  (+50 more)
tools/agent-fleet/: .gitignore  AGENTS.md  FOLLOWUPS.md  LICENSE  PROVENANCE.md  README.md  RELEASING.md  pyproject.toml
tools/agent-fleet/src/agent_fleet/: __init__.py  audit.py  cli.py  config.py  cooldowns.py  doctor.py  enrollment.py  executables.py  identity.py  leases.py  locks.py  models.py  output.py  paths.py  projects.py  providers.py  provision.py  quota.py  recovery.py  routeability.py  scheduler.py  sessions.py  status.py  transaction_fence.py  util.py
tools/agent-fleet/tests/: conftest.py  test_config_and_provision.py  test_contract_status.py  test_exec_sessions.py  test_profile_recovery.py  test_project_bootstrap.py  test_public_routeability.py  test_quota_scheduler.py  test_safety_transactions.py
(+35 files in other folders)
